<resources>
    <string name="app_name">Quick Message</string>

    <string name="source_code_url">https://github.com/boswelja/QuickMessage</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="pref_category_main_title">@string/app_name</string>
    <string name="pref_contact_picker_title">Send to</string>
    <string name="pref_edit_message_title">Message to Send</string>
    <string name="pref_requires_confirmation_title">Require Confirmation</string>
    <string name="pref_send_message_title">Send Message</string>

    <string name="pref_category_about_title">About</string>
    <string name="pref_source_code_title">View Source Code</string>
    <string name="pref_app_version_title">App Version</string>

    <string name="phone_number_dialog_title">Send to</string>
    <string name="phone_number_dialog_message">Enter a phone number to send a message to</string>
    <string name="phone_number_dialog_error">Enter a valid phone number</string>

    <string name="confirm_dialog_title">Confirm Sending Message</string>
    <string name="confirm_dialog_message">This will send \"%s\" to %s, are you sure?</string>
</resources>