<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_main_title">

        <androidx.preference.Preference
            android:key="pick_contact_preference_key"
            android:title="@string/pref_contact_picker_title" />

        <androidx.preference.EditTextPreference
            android:defaultValue="Hello from Quick Message!"
            android:key="message_key"
            android:selectAllOnFocus="true"
            android:title="@string/pref_edit_message_title" />

        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="require_confirmation_key"
            android:title="@string/pref_requires_confirmation_title" />

        <androidx.preference.Preference
            android:key="send_message_key"
            android:title="@string/pref_send_message_title" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_about_title">

        <androidx.preference.Preference
            android:key="source_code_key"
            android:title="@string/pref_source_code_title"
            android:summary="@string/source_code_url" />

        <androidx.preference.Preference
            android:key="app_version_key"
            android:title="@string/pref_app_version_title" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>